--- a/hw9/Makefile
+++ b/hw9/Makefile
@@ -1,4 +1,5 @@
 all:
-	gcc -msse2 hw9simd.c
+	gcc -std=c99 -msse2 -o hw9simd.o hw9simd.c
+	gcc -std=c99 -msse2 -o hw9.o hw9.c
 clean:
-	rm -f a.out
+	rm -f *.o
